--- a/WBR/build.gradle
+++ b/WBR/build.gradle
@@ -57,4 +57,5 @@ android {
 
 dependencies {
     compile "com.android.support:support-v4:18.0.+"
+    compile "eu.inmite.android.lib:android-styled-dialogs:1.1.2@aar"
 }
