--- a/WBR/build.gradle
+++ b/WBR/build.gradle
@@ -1,5 +1,9 @@
 apply plugin: 'android'
 
+
+
+
+
 android {
     signingConfigs {
         debug {
@@ -10,9 +14,9 @@ android {
 
         myConfig {
             storeFile file("./my-release-key.keystore")
-            storePassword "bibou34"
-            keyAlias "bibou"
-            keyPassword "bibou34"
+            storePassword new String(System.console().readPassword("\nstore password: "))
+            keyAlias new String(System.console().readPassword("\nkey alias : "))
+            keyPassword new String(System.console().readPassword("\nkey password: "))
         }
     }
 
@@ -20,10 +24,10 @@ android {
     buildToolsVersion "19.0.1"
 
     defaultConfig {
-        minSdkVersion 15
-        targetSdkVersion 15
+        minSdkVersion 19
+        targetSdkVersion 19
         versionCode 1
-        versionName "2.1.1.2"
+        versionName "2.1.1.4"
     }
 
     buildTypes {
